--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
   },
   "content_scripts": [
     {
+      "css": ["styles/style.css"],
       "js": ["scripts/script.js"],
       "matches": [
         "<all_urls>"
